# roughroute

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  andorra.graph  index.html  index.json  malta.graph  regions.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-regions.yml  deploy-pages.yml
crates/cli/: CLAUDE.md  Cargo.toml
crates/cli/src/: batch.rs  export.rs  main.rs  mem.rs  net.rs
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: format.rs  geo.rs  graph.rs  grid.rs  lib.rs  profile.rs  router.rs
crates/core/tests/: property.rs
crates/ffi/: CLAUDE.md  Cargo.toml
crates/ffi/src/: lib.rs
crates/wasm/: CLAUDE.md  Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: wasm_smoke.rs
design-gh-page/: index.html
design-gh-page/favicons/: site.webmanifest
docs/: DECISIONS.md  PLAN.md  roughroute-SPEC-EN.md
pkg/: package.json  roughroute_wasm.d.ts  roughroute_wasm.js  roughroute_wasm_bg.wasm  roughroute_wasm_bg.wasm.d.ts
