[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/build",
    "crates/cli",
    "crates/wasm",
    "crates/ffi",
]
# wasm/ffi are M1/M2 stubs; day-to-day builds don't need their toolchains.
default-members = ["crates/core", "crates/build", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Gegirhasut/roughroute"
rust-version = "1.85"

[workspace.dependencies]
roughroute-core = { path = "crates/core" }
roughroute-build = { path = "crates/build" }
osmpbf = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
toml = "0.8"
sha2 = "0.10"
proptest = "1"

[profile.release]
lto = true
