[package]
name = "roughroute-core"
description = "Pure offline routing core: .graph parsing, CSR graph, A*, snapping"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# HARD CONSTRAINT (spec §5.1): no dependencies at all — no network, no
# filesystem, no osmpbf. Input is `&[u8]`. Must compile to wasm32-unknown-unknown.
[dependencies]

[dev-dependencies]
proptest.workspace = true
